outputs/main/reevo_bpp_online_2025-07-25_23-32-46/problem_iter8_response6.txt_stdout.txt
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/eval.py", line 9, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 43
    order_penalties = np.exp(-np.arange(len(bins_remain_cap)) * 0.5)
                                                                    ^
IndentationError: unindent does not match any outer indentation level
14
2
